gitops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  selector:
    app: react-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
